NORM: norminetted move and modify selected obj

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -25,7 +25,7 @@ GNL_SRCS := $(GNL_DIR)get_next_line_bonus.c  $(GNL_DIR)get_next_line_utils_bonus
 
 VECTOR_SRCS = vector_add.c  vector_cross.c  vector_dot.c  vector_length.c \
 		vector_length_squared.c  vector_normalize.c  vector_project.c  vector_set_zero.c \
-		vector_sub.c vector_scale.c vector_invert.c
+		vector_sub.c vector_scale.c vector_invert.c rotate_vector_axis.c
 VECTOR_SRCS := $(addprefix $(VECTOR_DIR), $(VECTOR_SRCS))
 
 
